[gd_scene load_steps=3 format=2]

[ext_resource path="res://Food.gd" type="Script" id=1]
[ext_resource path="res://Food.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Name" type="Label" parent="."]
margin_left = -20.0
margin_top = -70.0
margin_right = 18.0
margin_bottom = -56.0
text = "NAME"

[node name="CurrentAmount" type="Label" parent="."]
margin_left = 50.0
margin_top = -40.0
margin_right = 136.0
margin_bottom = -26.0
text = "CURRENT AMOUNT"

[node name="GatheringCost" type="Label" parent="."]
margin_left = 50.0
margin_top = -20.0
margin_right = 163.0
margin_bottom = -6.0
text = "GATHERING COST"

[node name="RegenerationRate" type="Label" parent="."]
margin_left = 50.0
margin_right = 163.0
margin_bottom = 14.0
text = "REGENERATION RATE"
